Add currency handling to Purchase addition